# voxel-rs

./: Cargo.toml  README.md  build.rs  index.html
res/: entity_shader.wgsl  shader.wgsl  terrain.ase
src/: aabb.rs  block.rs  camera.rs  camera_controller.rs  chunk.rs  chunk_manager.rs  drops.rs  egui_renderer.rs  fps.rs  inventory.rs  lib.rs  light.rs  light.wgsl  main.rs  model.rs  physics.rs  resources.rs  shader.wgsl  state.rs  texture.rs  voxel.rs
src/assets/: shader.wgsl
