[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
bytemuck = { version = "1.14.0", features = [ "derive" ] }
cgmath = "0.18.0"
egui = "0.27.0"
egui-wgpu = "0.27.0"
egui-winit = "0.27.0"
env_logger = "0.10.1"
fs_extra = "1.3.0"
glob = "0.3.1"
log = "0.4.20"
noise = "0.8.2"
notify = "6.1.1"
pollster = "0.3.0"
rand = "0.8.5"
tobj = { version = "4.0.0", features = ["async"] }
wgpu = "0.19.3"
winit = {version = "0.29.4", features = ["rwh_05"]}

[build-dependencies]
anyhow = "1.0.76"
fs_extra = "1.3.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[profile.release]
debug = true
