[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
anyhow = "1.0.76"
bytemuck = { version = "1.14.0", features = [ "derive" ] }
cgmath = "0.18.0"
egui = { version = "0.27.0", default-features = false, features = ["default_fonts"]}
egui-wgpu = { version = "0.27.0", default-features = false }
egui-winit = { version = "0.27.0", default-features = false }
env_logger = "0.10.1"
fs_extra = "1.3.0"
glob = "0.3.1"
log = "0.4.20"
noise = "0.8.2"
notify = "6.1.1"
pollster = "0.3.0"
rand = "0.8.5"
tobj = { version = "4.0.0", features = ["async"] }
wgpu = "0.19.3"
winit = {version = "0.29.4", features = ["rwh_05"]}
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0.76"
fs_extra = "1.3.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
